# pharell

./: README.md  example.pcap  pcap-har-ha.cabal  pharell.cabal  pharrell.cabal  stack.yaml
app/: Main.hs
src/Network/PcapHarHa/: Lib.hs
src/Network/Pharell/: Lib.hs  Packets.hs
src/Network/Pharrell/: Lib.hs  Packets.hs
