name:                pcap-har-ha
version:             0.1.0.0
synopsis:            Convert pcap (Packet Capture) files to HARs (HTTP Archives)
description:         Please see README.md
homepage:            https://github.com/richardTowers/pcap-har-ha#readme
license:             MIT
license-file:        LICENSE
author:              Richard Towers
maintainer:          richard@richard-towers.com
copyright:           2016 Richard Towers
category:            Network
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Network.PcapHarHa.Lib
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , pcap
  default-language:    Haskell2010

executable pcap-har-ha
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , pcap-har-ha
  default-language:    Haskell2010

test-suite pcap-har-ha-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , pcap
                     , pcap-har-ha
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/richardTowers/pcap-har-ha
